feat: handling openapi errors
